# anidb2folder

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  run.sh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: features.md  high-level overview-draft.md  high-level-overview.md
docs/features/: 00-cli-scaffold.md  01-directory-scanner.md  02-verbose-mode.md  03-error-handling.md  05-format-parser.md  06-format-validator.md  10-anidb-api-client.md  11-local-cache.md  20-rename-to-readable.md  21-rename-to-anidb.md  30-character-sanitizer.md  31-name-truncation.md  40-dry-run-mode.md  41-history-tracking.md  42-revert-operation.md  50-ui-cleanup.md  60-revert-safety-validation.md  61-cache-management.md  63-fallback-title-handling.md  64-web-fallback-on-ban.md  99-github-actions-release.md
scripts/: build-release.sh  release.sh  setup-test-data.sh
src/: cli.rs  lib.rs  logging.rs  main.rs  progress.rs  revert.rs  scanner.rs  ui.rs
src/api/: client.rs  mod.rs  types.rs
src/cache/: mod.rs  store.rs  types.rs
src/error/: codes.rs  mod.rs
src/history/: mod.rs  reader.rs  types.rs  writer.rs
src/output/: mod.rs
src/parser/: mod.rs  types.rs
src/rename/: mod.rs  name_builder.rs  to_readable.rs  types.rs
src/validator/: mod.rs  types.rs
tests/: cli_tests.rs
