[package]
name = "anidb2folder"
version = "0.1.0"
edition = "2021"
description = "CLI tool for renaming anime directories between AniDB ID and human-readable formats"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.10"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["blocking", "gzip"] }
quick-xml = "0.37"
dotenvy = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
